[package]
name = "phenomic_lensing_protocol"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phenolgoical_lens"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
ring = { version = "0.17", default-features = false }
bincode = { version = "1.3", default-features = false }
arrayvec = { version = "0.7", default-features = false }
