[package]
name = "phenomic_lensing_protocol"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phenolgoical_lens"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ring = "0.17"
arrayvec = "0.7"
once_cell = "1.20"
